--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "mongoose": "^5.0.14"
   },
   "dependencies": {
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.2.1",
     "node-sass": "^4.8.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sass": "^1.1.1"
   }
 }
